--- a/projects/space-app/src/styles.scss
+++ b/projects/space-app/src/styles.scss
@@ -1,2 +1,27 @@
 /* You can add global styles to this file, and also import other style files */
-@import 'shared-styles';
+@import 'tables';
+
+* {
+  font-family: Arial, serif;
+}
+
+.header {
+  text-align: center;
+}
+
+.header a {
+  padding: 0 4px;
+}
+
+.container {
+  max-width: 1600px;
+  margin: 0 auto;
+}
+
+img {
+  max-width: 100%;
+}
+
+img.thumbnail {
+  max-width: 100px;
+}
