--- a/projects/space-app/src/app/app.component.html
+++ b/projects/space-app/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div class="header">
   <a routerLink="/">Space App</a>
   <a routerLink="/launches">Loty kosmiczne</a>
+  <a routerLink="/labs">Laboratoria</a>
 </div>
 <div class="container">
   <router-outlet></router-outlet>
