--- a/projects/shared-styles/forms.scss
+++ b/projects/shared-styles/forms.scss
@@ -1,5 +1,13 @@
 .form-field {
-  margin: 20px 0;
+  margin: 10px 0;
+}
+
+.form-field.inline {
+  display: inline-block;
+}
+
+.form-field.inline:not(:last-of-type) {
+  margin-right: 10px;
 }
 
 .form-field label {
