--- a/projects/space-app/src/app/modules/labs/components/lab-details-form/lab-details-form.component.html
+++ b/projects/space-app/src/app/modules/labs/components/lab-details-form/lab-details-form.component.html
@@ -1,23 +1,34 @@
 <ng-container [formGroup]="formGroup">
-  <div class="form-field">
-    <label for="name-control">Nazwa</label>
-    <input type="text" formControlName="name" id="name-control">
+  <div>
+    <div class="form-field inline">
+      <label>Nazwa</label>
+      <input type="text" formControlName="name">
+    </div>
+
+    <div class="form-field inline">
+      <label>Lokalizacja</label>
+      <select formControlName="moonId">
+        <option [ngValue]="1">Phobos</option>
+        <option [ngValue]="20">Księżyc</option>
+      </select>
+
+      <!-- TODO dodaj kontrolkę z wyborem księżyca wg planety -->
+    </div>
   </div>
 
-  <div class="form-field">
-    <label for="autonomous-control">
-      <input type="checkbox" formControlName="autonomous" id="autonomous-control">
-      Labolatorium autonomiczne
-    </label>
-  </div>
+  <div>
+    <div class="form-field inline">
+      <label>
+        <input type="checkbox" formControlName="autonomous">
+        labolatorium autonomiczne
+      </label>
+    </div>
 
-  <div class="form-field">
-    <label>Lokalizacja</label>
-    <select formControlName="moonId">
-      <option [ngValue]="1">Phobos</option>
-      <option [ngValue]="20">Księżyc</option>
-    </select>
-
-    <!-- TODO dodaj kontrolkę z wyborem księżyca wg planety -->
+    <div class="form-field inline">
+      <label>
+        <input type="checkbox" formControlName="enableTags">
+        włącz tagowanie
+      </label>
+    </div>
   </div>
 </ng-container>
