--- a/projects/space-app/src/app/modules/labs/components/labs-list-item/labs-list-item.component.html
+++ b/projects/space-app/src/app/modules/labs/components/labs-list-item/labs-list-item.component.html
@@ -2,8 +2,8 @@
   <td>{{lab.details.name}}</td>
   <td>{{lab.details.moonId | moonName | async}}</td>
   <td>{{lab.details.autonomous}}</td>
-  <td>{{lab.members.entries.length}}</td>
-  <td>{{lab.equipment.entries.length}}</td>
+  <td>{{lab.details.enableTags}}</td>
+  <td>{{lab.equipments.length}}</td>
   <td>
     <ng-content select=".actions"></ng-content>
   </td>
