--- a/projects/space-app/src/app/modules/labs/components/labs-list/labs-list.component.html
+++ b/projects/space-app/src/app/modules/labs/components/labs-list/labs-list.component.html
@@ -3,7 +3,7 @@
   <th>Nazwa</th>
   <th>Lokalizacja</th>
   <th>Autonomiczne</th>
-  <th>Liczba pracowników</th>
+  <th>Włączone tagi</th>
   <th>Liczba sprzętu</th>
   <th></th>
   </thead>
