--- a/projects/space-app/src/app/app.component.html
+++ b/projects/space-app/src/app/app.component.html
@@ -2,6 +2,7 @@
   <a routerLink="/">Space App</a>
   <a routerLink="/launches">Loty kosmiczne</a>
   <a routerLink="/labs">Laboratoria</a>
+  <a routerLink="/martian-calendar">Czas marsjański</a>
 </div>
 <div class="container">
   <router-outlet></router-outlet>
