fix global styling

--- a/projects/space-app/src/app/app.component.html
+++ b/projects/space-app/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="header">
-  <a routerLink="/">Space App</a>
+  <a routerLink="/start">Space App</a>
   <a routerLink="/launches">Loty kosmiczne</a>
   <a routerLink="/labs">Laboratoria</a>
   <a routerLink="/martian-calendar">Czas marsjański</a>
