add controls for equipment management

--- a/projects/space-app/src/app/modules/labs/components/equipment-form/equipment-form.component.html
+++ b/projects/space-app/src/app/modules/labs/components/equipment-form/equipment-form.component.html
@@ -7,4 +7,7 @@
     <label>Tag</label>
     <input type="text" formControlName="tag">
   </div>
+  <div class="form-field inline">
+    <ng-content select=".remove-button"></ng-content>
+  </div>
 </div>
