--- a/projects/space-app/src/app/modules/labs/components/lab-equipments-form/lab-equipments-form.component.html
+++ b/projects/space-app/src/app/modules/labs/components/lab-equipments-form/lab-equipments-form.component.html
@@ -1,2 +1,9 @@
-<app-equipment-form *ngFor="let formGroup of equipmentFormGroups" [formGroup]="formGroup">
+<select [formControl]="selectedEquipmentType">
+  <option *ngFor="let equipmentType of EquipmentTypes | keyvalue" [value]="equipmentType.value">
+    {{equipmentType.key}}
+  </option>
+</select>
+<button type="button" (click)="addEquipment()">Dodaj</button>
+<app-equipment-form *ngFor="let formGroup of equipmentFormGroups; index as index" [formGroup]="formGroup">
+  <button type="button" class="remove-button" (click)="removeEquipment(index)">Usuń</button>
 </app-equipment-form>
