--- a/projects/space-app/src/app/modules/labs/components/lab-equipments-form/lab-equipments-form.component.css
+++ b/projects/space-app/src/app/modules/labs/components/lab-equipments-form/lab-equipments-form.component.css
@@ -2,3 +2,7 @@ app-equipment-form:not(:last-of-type) {
   display: block;
   border-bottom: 1px solid black;
 }
+
+app-equipment-form:nth-of-type(odd) {
+  background-color: lightgray;
+}
