update to angular 13 + strict type checking

--- a/projects/space-app/src/app/modules/labs/components/labs-list-item/labs-list-item.component.html
+++ b/projects/space-app/src/app/modules/labs/components/labs-list-item/labs-list-item.component.html
@@ -1,6 +1,6 @@
 <tr>
   <td>{{lab.details.name}}</td>
-  <td>{{lab.details.moonId | moonName | async}}</td>
+  <td>{{lab.details.moonId! | moonName | async}}</td>
   <td>{{lab.details.autonomous}}</td>
   <td>{{lab.details.enableTags}}</td>
   <td>{{lab.equipments.length}}</td>
