--- a/projects/space-app/src/app/views/start/start.component.html
+++ b/projects/space-app/src/app/views/start/start.component.html
@@ -2,7 +2,7 @@
 
 <section>
   <div class="logo-wrapper">
-    // tutaj logo organizacji
+    <lib-logo></lib-logo>
   </div>
   <div  class="description-wrapper">
     Zapraszamy Cię do aktywnego przeglądania zasobów naszej organizacji. Znajdziesz w niej kompletną listę lotów
