--- a/projects/space-app/src/app/modules/launches/views/launches/launches.component.html
+++ b/projects/space-app/src/app/modules/launches/views/launches/launches.component.html
@@ -1,2 +1,7 @@
 <h2>Starty SpaceX</h2>
+<app-launches-search
+  *ngIf="queryParams | async as queryParams"
+  [params]="queryParams"
+  (paramsChange)="searchLaunches($event)"
+></app-launches-search>
 <app-launches-list *ngIf="launches | async as launches" [launches]="launches" (launchDetailsUpdate)="updateLaunchDetails($event)"></app-launches-list>
