--- a/projects/space-app/src/app/modules/launches/components/launches-list/launches-list.component.html
+++ b/projects/space-app/src/app/modules/launches/components/launches-list/launches-list.component.html
@@ -1,17 +1,19 @@
-<table>
-  <thead>
-  <tr>
-    <th>Naszywka</th>
-    <th>Nr lotu</th>
-    <th>Misja</th>
-    <th>Rakieta</th>
-    <th>Sukces</th>
-    <th>Data</th>
-    <th>Miejsce</th>
-    <th>Linki</th>
-  </tr>
-  </thead>
-  <tbody *ngFor="let launch of launches" appLaunchesListItem [launch]="launch">
-    <app-launch-details [details]="launch.details" (detailsUpdate)="updateDetails(launch, $event)"></app-launch-details>
-  </tbody>
-</table>
+<cdk-virtual-scroll-viewport itemSize="168" class="launches-viewport">
+  <table>
+    <thead>
+    <tr>
+      <th>Naszywka</th>
+      <th>Nr lotu</th>
+      <th>Misja</th>
+      <th>Rakieta</th>
+      <th>Sukces</th>
+      <th>Data</th>
+      <th>Miejsce</th>
+      <th>Linki</th>
+    </tr>
+    </thead>
+    <tbody *cdkVirtualFor="let launch of launches; trackBy: trackByFn; even as even" appLaunchesListItem [launch]="launch" [class.even]='even'>
+      <app-launch-details [details]="launch.details" (detailsUpdate)="updateDetails(launch, $event)"></app-launch-details>
+    </tbody>
+  </table>
+</cdk-virtual-scroll-viewport>
