--- a/projects/space-app/src/app/modules/labs/components/lab-details-form/lab-details-form.component.html
+++ b/projects/space-app/src/app/modules/labs/components/lab-details-form/lab-details-form.component.html
@@ -7,12 +7,7 @@
 
     <div class="form-field inline">
       <label>Lokalizacja</label>
-      <select formControlName="moonId">
-        <option [ngValue]="1">Phobos</option>
-        <option [ngValue]="20">Księżyc</option>
-      </select>
-
-      <!-- TODO dodaj kontrolkę z wyborem księżyca wg planety -->
+      <app-lab-moon-id-selector formControlName="moonId" [moons]="moons"></app-lab-moon-id-selector>
     </div>
   </div>
 
