--- a/projects/space-app/src/app/modules/labs/views/lab-form/lab-form.component.html
+++ b/projects/space-app/src/app/modules/labs/views/lab-form/lab-form.component.html
@@ -10,7 +10,7 @@
                            (equipmentAdd)="addEquipment($event)"
                            (equipmentRemove)="removeEquipment($event)">
   </app-lab-equipments-form>
-  <app-lab-details-form *ngSwitchDefault [formGroup]="detailsFormGroup"></app-lab-details-form>
+  <app-lab-details-form *ngSwitchDefault [formGroup]="detailsFormGroup" [moons]="(moons | async) ?? []"></app-lab-details-form>
 </div>
 
 <div>
