--- a/projects/space-app/src/app/modules/labs/components/equipment-form/equipment-form.component.html
+++ b/projects/space-app/src/app/modules/labs/components/equipment-form/equipment-form.component.html
@@ -10,4 +10,5 @@
   <div class="form-field inline">
     <ng-content select=".remove-button"></ng-content>
   </div>
+  <ng-container #formComponentContainer></ng-container>
 </div>
