--- a/projects/space-app/src/app/app.component.html
+++ b/projects/space-app/src/app/app.component.html
@@ -8,5 +8,10 @@
   <router-outlet></router-outlet>
 </div>
 <small>{{appVersion}}</small>
+<router-outlet name="browser"></router-outlet>
+
+<div class="loading" *ngIf="busy | async">
+ Trwa przetwarzanie danych...
+</div>
 
 <a2s-comm></a2s-comm>
