--- a/projects/space-app/src/app/views/start/start.component.html
+++ b/projects/space-app/src/app/views/start/start.component.html
@@ -1,5 +1,10 @@
 <h2>Witaj w Space App</h2>
 
+<div>
+  Nawigacja:
+  <button (click)="showNavigation()">Pokaż</button>
+  <button (click)="hideNavigation()">Ukryj</button>
+</div>
 <section>
   <div class="logo-wrapper">
     <lib-logo></lib-logo>
